--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,33 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.timer {
+  display: flex;
+  column-gap: 10px;
+  margin-top: 10px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #d8d8d8;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.date-time-picker__input {
+  padding: 5px;
+}
+
+.date-time-picker__button {
+  padding: 5px;
+  min-width: 80px;
+}
